Rest Country API

--- a/index.html
+++ b/index.html
@@ -1,29 +1,45 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Countries</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rest API Countries</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="nav">
-        <button>Region</button>
-        <!-- <div class="iskoci">
-            <button>Europa</button>
-            <button>Asia</button>
-            <button>Africa</button>
-            <button>Oceania</button>
-            <button>America</button></div> -->
-        <div class="desni"> 
-        <button>All</button>
-        <button>Independent</button>
+  <h2>Rest API Countries</h2>
+  <div class="container">
+  
+    <div class="controls">
+      <input type="search" placeholder="Search..." class="search">
     </div>
+
+    <div class="dropdown-menu">
+      <div class="dropdown">
+        <p>Filter by region:    </p>
+      </div>
+
+      <div class="drop-options">
+        <p class="regions">All</p>
+        <p class="regions">Africa</p>
+        <p class="regions">America</p>
+        <p class="regions">Asia</p>
+        <p class="regions">Europe</p>
+        <p class="regions">Oceania</p>
+      </div>
     </div>
-  <div class="card"></div>
+
+  </div>
+
+  <div class="countries">
+  </div>
 
 
+  <script src="app.js"></script>
 
-    <script src="app.js"></script>
 </body>
+
 </html>
